--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@ NGINX_PORT=80
 
 POSTGRES_HOST=${APP_NAME}_db
 POSTGRES_PORT=5432
-POSTGRES_USER=test_db_user
-POSTGRES_DB=test_db
-POSTGRES_PASSWORD=test_db_password
+POSTGRES_USER=user
+POSTGRES_DB=loans
+POSTGRES_PASSWORD=password
 
 REDIS_HOST=redis
 REDIS_PORT=6379
